--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.2",
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "pdfkit": "^0.14.0",
+    "archiver": "^6.0.1"
   }
 }
