--- a/backend/package.json
+++ b/backend/package.json
@@ -6,17 +6,28 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js"
+    "dev": "node --watch server.js",
+    "migrate": "node infrastructure/database/migrations/migrate.js up",
+    "migrate:down": "node infrastructure/database/migrations/migrate.js down",
+    "migrate:reset": "node infrastructure/database/migrations/migrate.js reset",
+    "db:test": "node infrastructure/database/test-connection.js"
   },
-  "keywords": ["thinkcraft", "ai", "deepseek"],
+  "keywords": [
+    "thinkcraft",
+    "ai",
+    "deepseek"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
+    "archiver": "^6.0.1",
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "pdfkit": "^0.14.0",
-    "archiver": "^6.0.1"
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7"
   }
 }
