--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "pdfkit": "^0.14.0",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
