--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,5 +18,9 @@ DB_NAME=thinkcraft
 DB_USER=postgres
 DB_PASSWORD=your_password_here
 
+# JWT 认证密钥（用于生成和验证用户登录令牌）
+# 生成方法: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+JWT_SECRET=your_jwt_secret_here_min_32_chars
+
 # 日志级别
 LOG_LEVEL=debug
