--- a/backend/package.json
+++ b/backend/package.json
@@ -22,13 +22,17 @@
   "dependencies": {
     "archiver": "^6.0.1",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.1.6",
     "pdfkit": "^0.14.0",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "uuid": "^9.0.1",
     "winston": "^3.19.0",
     "winston-daily-rotate-file": "^5.0.0"
   }
