--- a/backend/package.json
+++ b/backend/package.json
@@ -26,11 +26,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "pdfkit": "^0.14.0",
-    "redis": "^5.10.0"
+    "puppeteer": "^24.36.0",
+    "redis": "^5.10.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
