--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
-    "lint": "eslint frontend/ backend/ --ext .js",
-    "lint:fix": "eslint frontend/ backend/ --ext .js --fix",
+    "lint": "eslint frontend/js/modules/chat frontend/js/modules/report frontend/js/modules/project-manager.js frontend/js/core/storage-manager.js backend/src/features/projects --ext .js --max-warnings 9999",
+    "lint:fix": "eslint frontend/js/modules/chat frontend/js/modules/report frontend/js/modules/project-manager.js frontend/js/core/storage-manager.js backend/src/features/projects --ext .js --fix --max-warnings 9999",
     "format": "prettier --write \"**/*.{js,json,css,md}\"",
     "format:check": "prettier --check \"**/*.{js,json,css,md}\"",
     "postinstall": "cd backend && npm install",
