--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "postinstall": "cd backend && npm install",
     "prepare": "husky",
     "cleanup": "node backend/scripts/clear-project-space.js",
-    "cleanup:verify": "node -e \"const mongoose = require('mongoose'); mongoose.connect('mongodb://localhost:27017/thinkcraft').then(async () => { const db = mongoose.connection.db; const collections = ['projects', 'chats', 'business_plans', 'analysis_reports', 'users']; for (const col of collections) { const count = await db.collection(col).countDocuments(); console.log(col + ': ' + count); } process.exit(0); });\""
+    "cleanup:verify": "node -e \"const mongoose = require('mongoose'); mongoose.connect('mongodb://localhost:27017/thinkcraft').then(async () => { const db = mongoose.connection.db; const collections = ['projects', 'chats', 'business_plans', 'analysis_reports', 'users']; for (const col of collections) { const count = await db.collection(col).countDocuments(); console.log(col + ': ' + count); } process.exit(0); });\"",
+    "check:templates": "node scripts/check-artifact-templates.js"
   },
   "lint-staged": {
     "*.js": [
