Integrate deep research prompts and reporting

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,9 @@
 # Get your API key from: https://platform.deepseek.com/
 DEEPSEEK_API_KEY=your_api_key_here
 
+# DeepResearch Service Configuration
+DEEPRESEARCH_SERVICE_URL=http://localhost:5001
+
 # Server Configuration
 PORT=3000
 NODE_ENV=development
