--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -18,6 +18,7 @@ REDIS_DB=0
 
 # AI Provider
 DEEPSEEK_API_KEY=your_real_api_key
+DEEPRESEARCH_SERVICE_URL=http://deepresearch:5001
 
 # Auth Tokens
 ACCESS_TOKEN_SECRET=replace-with-strong-secret
