--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "test:smoke:workflow": "bash tests/system/test-workflow-collaboration-smoke.sh",
-    "lint": "eslint frontend/js/modules/chat frontend/js/modules/report frontend/js/modules/project-manager.js frontend/js/core/storage-manager.js backend/src/features/projects --ext .js --max-warnings 9999",
-    "lint:fix": "eslint frontend/js/modules/chat frontend/js/modules/report frontend/js/modules/project-manager.js frontend/js/core/storage-manager.js backend/src/features/projects --ext .js --fix --max-warnings 9999",
+    "lint": "eslint . --ext .js --max-warnings 0",
+    "lint:fix": "eslint . --ext .js --fix --max-warnings 0",
     "format": "prettier --write \"**/*.{js,json,css,md}\"",
     "format:check": "prettier --check \"**/*.{js,json,css,md}\"",
     "postinstall": "cd backend && npm install",
